fix button load more alignment

--- a/components/ui/button.module.css
+++ b/components/ui/button.module.css
@@ -9,6 +9,7 @@
   background-color: white;
   border: 1px solid #111111;
   color: #000000;
+  align-self: center;
 }
 
 .btnStart {
